# lil-scraper

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
demo/: input.txt  output.tx
src/: error.rs  main.rs  printer.rs  scraper.rs
