[package]
name = "lil-scraper"
version = "0.1.7"
edition = "2021"
authors = ["Walter Beller-Morales <walter.beller.morales@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "CLI tool to quickly scrape short snippets of text data from multiple HTTP sources"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
atty = "0.2.14"
clap = { version = "3.1.8", features = ["derive"] }
comfy-table = "6.1.4"
env_logger = "0.10.0"
exitcode = "1.1.2"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.2", features = [
    "native-tokio",
    "http1",
    "http2",
    "tls12",
    "logging"
] }
log = "0.4.0"
regex = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
yup-hyper-mock = "6.0.0"
